--- a/main.css
+++ b/main.css
@@ -20,7 +20,7 @@ a:focus,
 a{
     color:black;
     display: block;
-    font-family:"moon_flower_boldregular";
+    font-family:"Moon Flower Bold";
     text-decoration:none;
     font-size:20px;
 }
@@ -34,23 +34,23 @@ h3{
     color:#b87e7e;
     font-size:40px;
     text-decoration: none;
-    font-family:"moon_flower_boldregular";
+    font-family:"Moon Flower Bold";
 }
 h6{
     color:white;
     text-decoration: none;
-    font-family:"moon_flower_boldregular";
+    font-family:"Moon Flower Bold";
 }
 h1{
     color:#b87e7e;
     font-size:90px;
     text-decoration: none;
-    font-family:"moon_flower_boldregular";
+    font-family:"Moon Flower Bold";
 }
 p{
     font-size: 40px;
     text-decoration: none;
-    font-family:"moon_flower_boldregular";
+    font-family:"Moon Flower Bold";
 }
 
 #MapAPI
