--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@
 
 /* Links */
 @font-face {
-    font-family: 'moon_flower_boldregular';
+    font-family: 'Moon Flower Bold';
     src: url('moon_flower_bold.eot');
     src: url('moon_flower_bold.eot?#iefix') format('embedded-opentype'),
          url('moon_flower_bold.woff2') format('woff2'),
